--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -7,6 +7,7 @@ body {
   font-family: Roboto, sans-serif;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 }
 
 img {
@@ -18,6 +19,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 5px;;
 }
 
 input {
@@ -27,18 +29,44 @@ input {
   width: 400px;
 }
 
+
+ /* Most of my additions that */
 ul {
   list-style-type: none;
 }
 
 a {
   text-decoration: none;
+  color: #666;
+}
+.header, .footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
 }
 
-.header {
+.header > .left-links, .footer > .left-links {
+  display: flex;
+  justify-content: flex-start;
+  gap: 10px;
+  
+}
+.header > .right-links, .footer > .right-links {
+  display: flex;
+  justify-content: flex-end;
+  gap: 10px;
   
 }
 
 .footer {
-  
+  background: #eeeeee;
 } 
+
+.content {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+
+}
