--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -2,28 +2,75 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+
+  /* my additions */
+  display: flex;
+  align-items: center;     /* centers vertically */
+  justify-content: flex-start; /* centers horizontally */
+  font-size: 32px;
+  font-weight: 900;
+  padding-left: 16px;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+
+  /* my additions */
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+
+  /* my additions */
+  flex-shrink: 0;
+  padding: 16px;
+
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+}
+
+/* Most of my additions */
+
+a {
+  text-decoration: none;
+  font-size: 24px;
+  color: white;
+}
+ul {
+  list-style-type: none;
+} 
+.mainview {
+  flex: 1;
+  display: flex;
+} 
+.card {
+  width: 200px;
+  height: 200px;
+  padding: 48px;
+}
+.content {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 32px;        /* adds space between cards */
+  padding: 48px;    /* adds space around the content area */
+  flex: 1;          /* allows content area to grow */
 }
